# llm_promptfoo

./: .env.example  .gitignore  README.md  create_env.py  custom-litellm-provider.js  litellm.config.yaml  litellm_provider.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  test.yaml  youtube_summary.yaml
conf/providers/: google.yaml  ollama.yaml  openai.yaml  perplexity.yaml
prompts/: academic_style_prompt.txt  analysis copy.txt  analysis.txt  basic.txt  evaluation_rubric.txt  single_evaluation_rubric.txt  summary_prompt.txt  twitter_style_prompt.txt
prompts/summary/: academic_style_prompt.txt  summary_prompt.txt  twitter_style_prompt.txt  v09.txt  v111.txt  v131.txt  v2.txt
queries/: analysis_query copy.txt  analysis_query.txt  summary_query.txt
tests/: test.csv
